--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
+# godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
